--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ylz-xyz-auth-mdw",
+  "name": "ylz-xyz-common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
   }
